# mental_health_test

./: .dockerignore  Dockerfile  activate_env.bat  app.py  compile.bat  index.html  logic.cpp  mental_health_history.db  requirements.txt  run_server.bat  scorer.cpp  scorer.js  scorer.wasm  script.js  style.css
backend/: CMakeLists.txt  Dockerfile  README.md  main.cpp  main.py  requirements.txt  scorer.cpp  supabase_schema.sql
